# SFMLParticleAnimation

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake
src/: App.cpp  App.hpp  CMakeLists.txt  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  main.cpp
src/detail/: Core.hpp  Log.cpp  Log.hpp
